# soem_for_ros2

./: CMakeLists.txt  README.md  package.xml
SOEM/: CMakeLists.txt
SOEM/soem/: ethercatprint.c
soem/: ethercatmain.c  ethercatsoe.c  ethercattype.h
